Fixed full width card alignment.

--- a/css/app.css
+++ b/css/app.css
@@ -134,7 +134,7 @@ a {
 }
 
 .fullwidth {
-  width: 900px;
+  width: 920px;
 }
 
 .card img.yt-video-image {
